--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_NAME="المثقف الأول"
+APP_ENV=production
+APP_KEY=base64:maTUEbVHyHLPml3gRajYsgWLggNiM2hTbzgUHLxzLoU=
+APP_DEBUG=false
+APP_URL=https://moth-v6.site
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=alawabi
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=BMytUjfLFg0PciBnBuCOkg
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
